--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: opyate+uysio@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Unleash Your Server LTD is the professional playground of
   Juan Matthys Uys.
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/b/" # the subpath of your site, e.g. /blog/
 url: "http://essays.uys.io" # the base hostname & protocol for your site
 twitter_username: opyate
 github_username:  opyate
