--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Unleash Your Server LTD is the professional playground of
   Juan Matthys Uys.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://essays.uys.io" # the base hostname & protocol for your site
+url: "http://www.uys.io" # the base hostname & protocol for your site
 
 # Build settings
 highlighter: pygments
